<resources>
    <string name="app_name">Merchant</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_auth">AuthActivity</string>

    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="login">login</string>
    <string name="register">register</string>

    <string name="action_settings">Settings</string>
    <string name="action_business_string">My Business</string>
    <string name="action_orders_string">Orders</string>
    <string name="action_sales_string">Sales</string>
    <string name="action_ratings_string">Ratings</string>
    <string name="action_profile_string">Profile</string>
    <string name="navigation_setting_subheader">Preferences</string>
    <string name="action_logout_string">Logout</string>
    <string name="drawer_open" translatable="false">Open</string>
    <string name="drawer_close" translatable="false">Close</string>
    <string name="tab_categories">CATEGORIES</string>
    <string name="tab_orders">ORDERS</string>


    <string name="description_dummy">Donec odio magna, blandit vitae dolor tempus, mollis euismod nisi         Etiam blandit vitae turpis hendrerit consequat. Nam mollis quis ligula eget ullamcorper.         Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.         Fusce dignissim gravida ex eu pretium. Quisque eget est in sapien maximus dapibus.         Donec augue ipsum, commodo in leo a, facilisis malesuada sapien.         Pellentesque hendrerit sem purus, vel sodales sem lacinia quis.         Ut at rhoncus purus. Aenean ligula libero, mattis eleifend consequat vulputate, ullamcorper sed est.         Morbi dignissim elementum semper. Nunc suscipit massa finibus leo tincidunt, eget facilisis quam faucibus.         In sollicitudin varius tortor at dictum. Etiam quis leo rutrum, mattis orci ac, dapibus tellus.         Nam eleifend, odio eu pretium porttitor, ligula mi congue massa, suscipit rhoncus turpis felis at ligula.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancell</string>

    <string-array name="unit_names">
        <item>liter</item>
        <item>gram</item>
        <item>kilogram</item>
        <item>watt</item>
        <item>square meter</item>
        <item>meter</item>
        <item>milliliter</item>
        <item>Pack</item>
        <item>piece</item>
        <item>Full</item>
        <item>Half</item>
    </string-array>

</resources>
