<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/TextLabel"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rowland.delivery.features.auth.ui.AuthActivity"
    tools:showIn="@layout/activity_auth">

    <include
        android:id="@+id/logo_layout"
        layout="@layout/content_logo" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/logo_layout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_textinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passord_textinput_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/custom_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_prefered_height"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/login"
                android:textColor="@color/orangelike_color"
                app:backgroundTint="@color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_prefered_height"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/register"
                android:textColor="@color/white"
                app:backgroundTint="@color/orangelike_color" />

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/custom_login_layout" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
